--- a/resources/angular-views/group/partials/details.html
+++ b/resources/angular-views/group/partials/details.html
@@ -13,4 +13,12 @@
         data-key="name"
         data-required="true">
     </div>
+
+    <!-- Tags -->
+    <div
+        data-ui-editable-list-item
+        data-label="Activities"
+        data-key="tags"
+        data-type="tag">
+    </div>
 </div>
