--- a/resources/angular-views/profile/partials/details.html
+++ b/resources/angular-views/profile/partials/details.html
@@ -76,4 +76,12 @@
         data-disabled="true">
     </div>
 
+    <!-- Tags -->
+    <div
+        data-ui-editable-list-item
+        data-label="Activities"
+        data-key="tags"
+        data-type="tag">
+    </div>
+
 </div>
