Enabled splitting of SASS files for maintainability + bug fixes + UX updates

--- a/resources/angular-views/group/partials/details.html
+++ b/resources/angular-views/group/partials/details.html
@@ -17,7 +17,7 @@
     <!-- Tags -->
     <div
         data-ui-editable-list-item
-        data-label="Activities"
+        data-label="Sport"
         data-key="tags"
         data-type="tag">
     </div>
