--- a/resources/angular-views/profile/partials/details.html
+++ b/resources/angular-views/profile/partials/details.html
@@ -79,7 +79,15 @@
     <!-- Tags -->
     <div
         data-ui-editable-list-item
-        data-label="Activities"
+        data-label="Main Sport"
+        data-key="tags"
+        data-type="tag">
+    </div>
+
+    <!-- Secondary tags -->
+    <div
+        data-ui-editable-list-item
+        data-label="Secondary Sport"
         data-key="tags"
         data-type="tag">
     </div>
