Working on tags lookup

--- a/resources/angular-views/profile/partials/details.html
+++ b/resources/angular-views/profile/partials/details.html
@@ -76,20 +76,21 @@
         data-disabled="true">
     </div>
 
-    <!-- Tags -->
+    <!-- Primary Tag -->
     <div
         data-ui-editable-list-item
-        data-label="Main Sport"
-        data-key="tags"
+        data-label="Primary Sport"
+        data-key="tag"
         data-type="tag">
     </div>
 
     <!-- Secondary tags -->
     <div
         data-ui-editable-list-item
-        data-label="Secondary Sport"
+        data-label="Other Sports"
         data-key="tags"
-        data-type="tag">
+        data-type="tag"
+        data-max-tags="10">
     </div>
 
 </div>
