Performance improvements + finished uiEditableItemList for tags

--- a/resources/angular-views/profile/partials/details.html
+++ b/resources/angular-views/profile/partials/details.html
@@ -80,7 +80,7 @@
     <div
         data-ui-editable-list-item
         data-label="Primary Sport"
-        data-key="tag"
+        data-key="primary_tag"
         data-type="tag">
     </div>
 
@@ -88,9 +88,8 @@
     <div
         data-ui-editable-list-item
         data-label="Other Sports"
-        data-key="tags"
+        data-key="secondary_tags"
         data-type="tag"
         data-max-tags="10">
     </div>
-
 </div>
