Created new UX pages + organized SASS files

--- a/resources/assets/sass/partials/_selectize.scss
+++ b/resources/assets/sass/partials/_selectize.scss
@@ -3,11 +3,10 @@
  * Copyright Heddoko(TM) 2015, all rights reserved.
  *
  *
- * @brief   Styles for selectize inputs.
- * @author  Francis Amankrah (frank@heddoko.com)
- * @date    November 2015
+ *    - Selectize.js, https://brianreavis.github.io/selectize.js/
  */
- .selectize-control::before {
+
+.selectize-control::before {
     content: ' ';
     z-index: 2;
     position: absolute;
@@ -19,21 +18,26 @@
     background: url(../images/ui/spinner.gif);
     background-size: 16px 16px;
     opacity: 0;
- }
+}
+
 .selectize-control.loading {
     text-align: left;
 }
+
 .selectize-control.loading::before {
     opacity: 0.4;
 }
+
 .selectize-control .selectize-input {
     @include border-radius(0);
 }
+
 .selectize-control.single .selectize-input::after {
     display: none;
 }
 
 .selectize-dropdown-content .highlight {
-    background-color: $heddokogreen;
+    padding: none;
+    background-color: $heddokogreen !important;
     color: #333;
 }
