Updated 'import' screen

--- a/resources/angular-views/partials/navigation.html
+++ b/resources/angular-views/partials/navigation.html
@@ -25,7 +25,7 @@
 
         <!-- List of movements -->
 		<li>
-            <a href="#/organize"><span>Organize</span></a>
+            <a href="#/movements"><span>Movements</span></a>
         </li>
 
         <!-- Submit movement data form -->
