Added uiMovement and uiTaggable directives + other UX updates

--- a/resources/assets/sass/partials/_labels-alerts-progress.scss
+++ b/resources/assets/sass/partials/_labels-alerts-progress.scss
@@ -3,7 +3,7 @@
  * Copyright Heddoko(TM) 2015, all rights reserved.
  *
  *
- *    - Labels / Alerts / Progress Bars
+ *    Labels / Alerts / Progress Bars / Tags
  */
 
 .label-default {
