--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -29,7 +29,9 @@
 
 /* Directives */
 @import 'directives/ui-editable-list.scss';
+@import 'directives/ui-movement.scss';
 @import 'directives/ui-page-title.scss';
+@import 'directives/ui-taggable.scss';
 
 
 
