--- a/resources/angular-views/fms/demo/partials/test-sagittal.html
+++ b/resources/angular-views/fms/demo/partials/test-sagittal.html
@@ -4,9 +4,13 @@
 </div>
 
 <div class="panel-body">
-    <video class="demo-test" style="margin: 0 20%; width: 60%;">
-        <source ng-src="{{'../../../../demo/aslr/left/sagittal.webm'}}" type="video/webm"/>
-        <source src="{{'../../../../demo/aslr/left/sagittal.mp4'}}" type="video/mp4"/>
+    <video class="demo-test" style="margin: 0 20%; width: 60%; transform:scale(1.5); position: relative; top: 40px">
+        <!-- <source ng-src="{{ '../../../../demo/aslr/analysis/sagittal.webm?1' }}" type="video/webm"/> -->
+        <source src="{{ '../../../../demo/aslr/analysis/sagittal.mp4?1' }}" type="video/mp4"/>
+        <!-- <source ng-src="{{'../../../../demo/aslr/analysis/sagittal.webm'}}" type="video/webm"/>
+        <source src="{{'../../../../demo/aslr/analysis/sagittal.mp4'}}" type="video/mp4"/> -->
+        <!-- <source ng-src="{{'../../../../demo/aslr/left/sagittal.webm'}}" type="video/webm"/>
+        <source src="{{'../../../../demo/aslr/left/sagittal.mp4'}}" type="video/mp4"/> -->
         Sorry, your browser doesn't support HTML5 video.
     </video>
 </div>
