--- a/resources/assets/sass/partials/_buttons.scss
+++ b/resources/assets/sass/partials/_buttons.scss
@@ -3,7 +3,7 @@
  * Copyright Heddoko(TM) 2015, all rights reserved.
  *
  *
- *        5 - Buttons and Links
+ *        Buttons and Links
  */
 
 .btn {
@@ -629,26 +629,26 @@ $button-styles:(
 }
 
 $social-profiles: (
-  twitter: #00c7f7,
-  facebook: #335397,
-  google-plus: #dd4a38,
-  gplus: #dd4a38,
-  instagram:#82685a,
-  vimeo:#63879c,
-  flickr:#0061db,
-  github:#3b3b3b,
-  pinterest:#bc2725,
-  tumblr:#586980,
-  linkedin:#018faf,
-  dribble:#ea73a0,
-  stumbleupon:#ea4b24,
-  lastfm:#b80638,
-  evernote:#3bab27,
-  skype:#skype,
-  soundcloud:#06f,
-  behance:#b80638,
-  rss:#f79638,
-  youtube:#cc181e
+    twitter: #00c7f7,
+    facebook: #335397,
+    google-plus: #dd4a38,
+    gplus: #dd4a38,
+    instagram:#82685a,
+    vimeo:#63879c,
+    flickr:#0061db,
+    github:#3b3b3b,
+    pinterest:#bc2725,
+    tumblr:#586980,
+    linkedin:#018faf,
+    dribble:#ea73a0,
+    stumbleupon:#ea4b24,
+    lastfm:#b80638,
+    evernote:#3bab27,
+    skype:#skype,
+    soundcloud:#06f,
+    behance:#b80638,
+    rss:#f79638,
+    youtube:#cc181e
 );
 
 @each $profile, $bgcolor in $social-profiles {
@@ -671,6 +671,9 @@ $social-profiles: (
 
 }
 
+/*
+ *
+ */
 .btn-metro {
     position: relative;
     padding: 0;
@@ -705,10 +708,10 @@ $social-profiles: (
 }
 
 .btn-group>.btn:first-child:not(:last-child):not(.dropdown-toggle){
-  @include border-radius(0px);
+    @include border-radius(0px);
 }
 .btn-group>.btn:last-child:not(:first-child), .btn-group>.dropdown-toggle:not(:first-child){
-  @include border-radius(0px);
+    @include border-radius(0px);
 }
 
 
@@ -753,6 +756,35 @@ $badge-colors:(
     background-color: $badge-color;
   }
 
+}
+
+/*
+ * Circular buttons
+ */
+.btn-circle {
+    width: 30px;
+    height: 30px;
+    text-align: center;
+    padding: 6px 0;
+    font-size: 12px;
+    line-height: 1.428571429;
+    @include border-radius(15px);
+}
+.btn-circle.btn-lg {
+    width: 50px;
+    height: 50px;
+    padding: 10px 16px;
+    font-size: 18px;
+    line-height: 1.33;
+    border-radius: 25px;
+}
+.btn-circle.btn-xl {
+    width: 70px;
+    height: 70px;
+    padding: 10px 16px;
+    font-size: 24px;
+    line-height: 1.33;
+    border-radius: 35px;
 }
 
 
