--- a/resources/assets/sass/partials/_pages.scss
+++ b/resources/assets/sass/partials/_pages.scss
@@ -754,8 +754,11 @@
     margin: 40px auto;
 }
 .import-page .row .movement-title {
-    margin: 10px auto;
+    margin: 0 auto 20px;
     border: none;
     border-bottom: 1px dotted #ccc;
     background-color: transparent;
+}
+.import-page .row .row.movement-edit {
+    margin: 60px auto 0;
 }
