Implemented system for overlayed screens + added content for thumbnail selection & movement editor overlays

--- a/resources/angular-views/partials/header.html
+++ b/resources/angular-views/partials/header.html
@@ -195,6 +195,11 @@
                                 Selected: {{ global.state.profile.selected.first_name || 'None' }}
                             </a>
                         </li>
+                        <li>
+                            <a href="javascript:;"data-toggle="modal" data-target="#overlay-screen">
+                                Overlay Test
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </li>
