--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -17,6 +17,7 @@
 @import 'partials/_messages.scss';
 
 /* Specific */
+@import 'partials/_overlays.scss';
 @import 'partials/_navigation.scss';
 @import 'partials/_port-from-old-stylesheet.scss';
 @import 'partials/_labels-alerts-progress.scss';
