Added user settings & preferences screen

--- a/resources/angular-views/partials/modal.html
+++ b/resources/angular-views/partials/modal.html
@@ -1,6 +1,6 @@
 
 <div class="modal fade" id="overlay-screen" tabindex="-1" data-ng-controller="ModalController">
-    <div class="modal-dialog modal-lg">
+    <div class="modal-dialog modal-responsive">
         <div class="modal-content">
 
             <!-- Overlay title -->
