--- a/resources/assets/sass/directives/ui-page-title.scss
+++ b/resources/assets/sass/directives/ui-page-title.scss
@@ -6,7 +6,7 @@
 
 .ui-page-title-background {
     display: inline-block;
-    margin: 5px 0 0 30px;
+    margin: 5px 0 30px 30px;
     position: relative;
     height: 50px;
     background-color: rgba(59, 214, 178, 0.4);
