--- a/resources/angular-views/partials/header.html
+++ b/resources/angular-views/partials/header.html
@@ -206,9 +206,8 @@
 		</ul>
 
         <ul class="nav-right list-unstyled">
-            <li ng-controller="SearchController">
+            <!-- <li ng-controller="SearchController">
 
-                <!-- Search Filters -->
                 <div class="input-group">
                     <div class="input-group-btn">
                         <button
@@ -232,7 +231,7 @@
                     </div>
                     <input type="text" class="form-control" placeholder="search...">
                 </div>
-            </li>
+            </li> -->
             <li>
                 <div class="btn-group">
 
