Working on improving profiles/groups loading

--- a/resources/angular-views/partials/breadcrumbs.html
+++ b/resources/angular-views/partials/breadcrumbs.html
@@ -5,19 +5,19 @@
             Dashboard
         </a>
     </li>
-    <li ng-show="global.state.group.selected.id > 0">
+    <li ng-show="global.store.groupId > 0">
         <a class="active" href="javascript:;" ng-click="Rover.browseTo.path('/group/list')">
             Teams
         </a>
     </li>
-    <li ng-show="isProfilePage && global.state.group.selected.id > 0">
+    <li ng-show="isProfilePage && global.store.groupId > 0">
         <a class="active" href="javascript:;" ng-click="Rover.browseTo.group()">
-            {{ global.state.group.selected.name }}
+            {{ global.state.group.list[global.store.groupId].name }}
         </a>
     </li>
-    <li ng-show="currentPath == '/profile/view'">
+    <li ng-show="currentPath == '/profile/view' && global.store.profileId > 0">
         <a class="active" href="javascript:;" ng-click="Rover.browseTo.profile()">
-            {{ global.state.profile.selected.first_name }}
+            {{ global.state.profile.list[global.store.profileId].first_name }}
         </a>
     </li>
     <li ng-show="currentPath == '/group/create'">
