--- a/resources/assets/sass/partials/_header.scss
+++ b/resources/assets/sass/partials/_header.scss
@@ -89,10 +89,20 @@
 .top-header .search-input .caret {
     color: #ccc;
 }
-.top-header .search-input input[type="text"].form-control,
-.top-header .search-input input[type="text"].form-control:focus {
+.top-header .search-input .selectize-control {
+    display: block;
+    height: 34px;
     border-color: #ddd;
     @include box-shadow(1px 1px 2px rgba(0, 0, 0, 0.2));
+}
+.top-header .search-input .selectize-input {
+    display: block;
+    height: 34px;
+    border: none;
+    background-color: transparent;
+}
+.top-header .search-input .selectize-dropdown {
+    position: absolute !important;
 }
 @media (min-width: 768px) {
     .top-header .search-input {
