--- a/resources/assets/sass/partials/_pages.scss
+++ b/resources/assets/sass/partials/_pages.scss
@@ -1,11 +1,19 @@
 /**
- *
  * Copyright Heddoko(TM) 2015, all rights reserved.
  *
- *
- *    Pages
  */
 
+/*
+ * Laravel pages.
+ */
+.inspiring-quote {
+    position: fixed;
+    margin: 0 5%;
+    width: 90%;
+    top: 45%;
+    text-transform: uppercase;
+    font-weight: bold;
+}
 
 /*
  * Angular - Import pages.
