--- a/resources/assets/sass/partials/_pages.scss
+++ b/resources/assets/sass/partials/_pages.scss
@@ -88,10 +88,10 @@
             height: 55px;
             padding: 0 20px;
             border: none;
-            color: $text-color;
+            color: #333;
             font-style: italic;
             font-weight: bold;
-            font-size: 1.3em;
+            font-size: 1.1em;
             background-color: rgba(255, 255, 255, .7);
         }
 
