--- a/resources/assets/sass/partials/_pages.scss
+++ b/resources/assets/sass/partials/_pages.scss
@@ -8,7 +8,13 @@
  * Angular - Import pages.
  */
 .import-page .row.movement-import {
-    margin: 40px auto;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    padding: 20px;
+    @include transition(background-color .7s)
+}
+.import-page .row.movement-import.ng-enter-active {
+    background-color: rgba(59, 214, 178, .6);
 }
 .import-page .row .movement-title {
     margin: 0 auto 20px;
