UX & UI updates on import and dashboard screens

--- a/resources/angular-views/partials/navigation.html
+++ b/resources/angular-views/partials/navigation.html
@@ -83,7 +83,7 @@
             </ul>
         </li>
 
-        <li style="margin: 10px 0 0; text-align: center; font-size: 0.8em;">
+        <li style="margin: 10px 0 0; text-align: center; font-size: 0.8em; color: #aaa;">
             {{ global.appVersion }}
 		</li>
 
