Progressed on main dashboard page, register page and password reset page

--- a/resources/angular-views/partials/navigation.html
+++ b/resources/angular-views/partials/navigation.html
@@ -23,6 +23,11 @@
             <a href="#/group/list"><span>Teams</span></a>
         </li>
 
+        <!-- List of athletes -->
+		<li>
+            <a href="#/profile/list"><span>Athletes</span></a>
+        </li>
+
         <!-- List of movements -->
 		<li>
             <a href="#/movements"><span>Movements</span></a>
@@ -41,6 +46,11 @@
         <!-- FMS results page -->
 		<li>
             <a href="#/fmsresults"><span>fms results</span></a>
+		</li>
+
+        <!-- Comparison -->
+		<li>
+            <a href="#/compare"><span>fms results</span></a>
 		</li>
 
         <!-- Live FMS pages. -->
