--- a/resources/angular-views/partials/navigation.html
+++ b/resources/angular-views/partials/navigation.html
@@ -50,7 +50,7 @@
 
         <!-- Comparison -->
 		<li>
-            <a href="#/compare"><span>fms results</span></a>
+            <a href="#/compare"><span>Compare</span></a>
 		</li>
 
         <!-- Live FMS pages. -->
@@ -91,6 +91,11 @@
                     <a href="#/fms/live/ps"><span>Posterior Rocking (C. Test)</span></a>
                 </li>
             </ul>
+        </li>
+
+        <!-- Account page -->
+		<li>
+            <a href="#/account"><span>My Account</span></a>
         </li>
 
         <li style="margin: 10px 0 0; text-align: center; font-size: 0.8em; color: #aaa;">
