--- a/resources/assets/sass/partials/_general.scss
+++ b/resources/assets/sass/partials/_general.scss
@@ -65,7 +65,7 @@ a {
 a:hover, a:focus {
     // color: #0d0d0d;
     color: $heddokogreen;
-    text-decoration: underline;
+    // text-decoration: underline;
 }
 
 .img-responsive {
