--- a/resources/assets/sass/partials/_header.scss
+++ b/resources/assets/sass/partials/_header.scss
@@ -89,14 +89,17 @@
 .top-header .search-input .selectize-control {
     display: block;
     height: 34px;
-    border: 1px solid #ddd;
+    // border: 1px solid #ddd;
     // @include box-shadow(1px 1px 2px rgba(0, 0, 0, 0.2));
 }
 .top-header .search-input .selectize-input {
     display: block;
     height: 34px;
     border: none;
-    background-color: transparent;
+    background-color: $blue;
+}
+.top-header .search-input .selectize-input input {
+    color: #fff;
 }
 .top-header .search-input .selectize-dropdown {
     position: absolute !important;
